# wattetheria

./: .dockerignore  .env.release  .env.release.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.release.yml  docker-compose.wattswarm.yml  docker-compose.yml  package.json
apps/wattetheria-cli/: Cargo.toml
apps/wattetheria-cli/src/: cli_args.rs  config.rs  doctor.rs  main.rs  publish.rs
apps/wattetheria-cli/tests/: bootstrap_integration.rs  cli_integration.rs  product_iteration_integration.rs
apps/wattetheria-kernel/: Cargo.toml
apps/wattetheria-kernel/src/: bootstrap.rs  cli.rs  demo.rs  handshake.rs  main.rs  runtime_loop.rs
apps/wattetheria-observatory/: Cargo.toml
apps/wattetheria-observatory/src/: main.rs
apps/wattetheria-observatory/tests/: integration.rs
crates/control-plane/: Cargo.toml  build.rs
crates/control-plane/src/: agent_attach.rs  auth.rs  autonomy.rs  diagnostics.rs  gateway_dispatch.rs  lib.rs  reliability_maintenance.rs  runtime_sessions.rs  social_host.rs  state.rs  swarm_sync.rs
crates/control-plane/src/routes/: agent_events.rs  agent_skills.rs  civilization.rs  client.rs  client_api.rs  client_swarm.rs  collective_skills.rs  console.rs  core.rs  diagnostics.rs  experience.rs  galaxy.rs  game.rs  governance.rs  identity.rs  mailbox.rs  map.rs  mcp.rs  missions.rs  network.rs  organizations.rs  payment_chain.rs  payments.rs  policy.rs  profile.rs  public_identity.rs  reward_events.rs  reward_view.rs  runtime_config.rs  servicenet.rs  servicenet_publish.rs  servicenet_published.rs  settlement_delegation.rs  social.rs  supervision.rs  supervision_console.html  topics.rs
crates/control-plane/src/routes/mcp/: collective.rs  protocol.rs  schema.rs
crates/control-plane/src/routes/servicenet/: async_jobs.rs  bridge.rs  bridge_tasks.rs  envelope.rs  execution.rs  mod.rs  publish.rs  publish_validation.rs  published.rs  tasks.rs  wire.rs
crates/control-plane/src/routes/supervision_console/: script.js  styles.css  template.html
crates/control-plane/src/routes/supervision_console/css/: components.css  forms.css  hives.css  identity-editor.css  identity.css  layout.css  navigation.css  nearby.css  notices.css  overview.css  responsive.css  runtime.css  servicenet.css  skills.css  social.css  theme.css  utilities.css  wallet.css  workspace.css
crates/control-plane/src/tests/: agent_event_tests.rs  civilization_tests.rs  client_tests.rs  diagnostics_tests.rs  galaxy_tests.rs  mcp_tests.rs  mod.rs  organization_tests.rs  servicenet_publication_tests.rs  servicenet_tests.rs  social_tests.rs  swarm_tests.rs  system_tests.rs
crates/kernel-core/: Cargo.toml
crates/kernel-core/src/: economy.rs  lib.rs  servicenet.rs  swarm_bridge.rs  swarm_sync.rs  types.rs
crates/kernel-core/src/agent_identity/: file_store.rs  mod.rs  store.rs
crates/kernel-core/src/agent_identity/service_agent/: file_store.rs  mod.rs  store.rs
crates/kernel-core/src/brain/: engine.rs  mod.rs  night_shift.rs  plugin_registry.rs  policy_engine.rs  runtime_adapter.rs
crates/kernel-core/src/civilization/: emergency.rs  galaxy.rs  identities.rs  metrics.rs  missions.rs  mod.rs  organizations.rs  profiles.rs  relationships.rs  topics.rs  world.rs
crates/kernel-core/src/game/: anchor.rs  bootstrap.rs  catalog.rs  mission_pack.rs  mod.rs  onboarding.rs  progression.rs  qualification.rs  starter.rs
crates/kernel-core/src/governance/: constitution.rs  engine.rs  mailbox.rs  mod.rs  oracle.rs
crates/kernel-core/src/map/: consequence.rs  mod.rs  model.rs  registry.rs  state.rs  travel.rs  validator.rs
crates/kernel-core/src/payments/: mod.rs  x402.rs
crates/kernel-core/src/security/: admission.rs  hashcash.rs  identity.rs  mod.rs  signing.rs  trust.rs  wallet_identity.rs
crates/kernel-core/src/servicenet/: a2a_tasks.rs  direct.rs  direct_tasks.rs  publication.rs  publisher_state.rs
crates/kernel-core/src/storage/: audit.rs  data_ops.rs  event_log.rs  local_db.rs  mod.rs  online_proof.rs  summary.rs
crates/kernel-core/src/tasks/: galaxy_task.rs  mod.rs  swarm_bridge.rs  system_puzzle.rs  task_engine.rs
crates/kernel-core/tests/: capabilities_integration.rs  hashcash_integration.rs  pipeline_integration.rs  skill_runtime_integration.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: agent_participation.rs  bootstrap.rs  cli.rs  demo.rs  gateway_registry.rs  gateway_sync.rs  handshake.rs  lib.rs  oracle_sync.rs  recovery.rs  runtime_loop.rs  snapshot_broadcast.rs
crates/observatory-core/: Cargo.toml
crates/observatory-core/src/: app.rs  index.html  lib.rs  models.rs  routes.rs  store.rs
crates/p2p-runtime/: Cargo.toml
crates/p2p-runtime/src/: lib.rs
crates/social/: Cargo.toml
crates/social/src/: lib.rs  types.rs
crates/social/src/application/: block_service.rs  friend_request_service.rs  friendship_service.rs  message_service.rs  mod.rs  orchestration_service.rs  policy_service.rs  receipt_service.rs  remote_identity_service.rs  thread_service.rs  transport_binding_service.rs
crates/social/src/domain/: agent_skills.rs  blocks.rs  deferred_agent_events.rs  friend_requests.rs  friendships.rs  identities.rs  messages.rs  mod.rs  receipts.rs  reliability_tasks.rs  threads.rs  transport_bindings.rs
crates/social/src/policy/: bootstrap.rs  decisions.rs  evaluator.rs  mod.rs  rules.rs
crates/social/src/ports/: clock.rs  did_port.rs  local_identity_provider.rs  mod.rs  repositories.rs  transport_port.rs
crates/social/src/store/: agent_skills.rs  deferred_agent_events.rs  mod.rs  reliability_tasks.rs  schema.rs
kernel/: Cargo.toml
kernel/src/: admission.rs  brain.rs  capabilities.rs  control_plane.rs  data_ops.rs  galaxy_task.rs  hashcash.rs  identity.rs  lib.rs  mailbox.rs  main.rs  mcp.rs  night_shift.rs  plugin_registry.rs  signing.rs  skill_package.rs  skill_runtime.rs  swarm_bridge.rs  trust.rs
kernel/tests/: eventlog_integration.rs
lib/: cli.js
observatory/: Cargo.toml
observatory/src/: lib.rs  main.rs
observatory/tests/: integration.rs
(+113 files in other folders)
