[package]
name = "wattetheria-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "wattetheria_kernel"
path = "src/lib.rs"

[[bin]]
name = "wattetheria-kernel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
libp2p.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_core.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true
jsonschema.workspace = true
flate2.workspace = true
fs2.workspace = true
wattswarm-protocol = { git = "https://github.com/wattetheria/wattswarm.git", rev = "9965eea30b88b4ebb16a4e6a855f4d37ecb70284", package = "wattswarm-protocol" }

[dev-dependencies]
tempfile.workspace = true
tower = "0.5"
http-body-util = "0.1"
