[package]
name = "wattetheria-observatory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "wattetheria_observatory"
path = "src/lib.rs"

[[bin]]
name = "wattetheria-observatory"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
wattetheria-kernel = { path = "../kernel" }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
