[package]
name = "wattetheria-client-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
hex.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../../crates/kernel-core" }
