[package]
name = "wattetheria-client-cli"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
hex.workspace = true
jsonschema.workspace = true
json-strip-comments.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
url = "2"
uuid.workspace = true
watt-did = { git = "https://github.com/wattetheria/watt-did.git", branch = "main" }
watt-wallet = { git = "https://github.com/wattetheria/watt-wallet.git", branch = "main" }
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../../crates/kernel-core" }
