[package]
name = "wattetheria-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
wattetheria-node-core = { path = "../../crates/node-core" }
