[package]
name = "wattetheria-control-plane"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "wattetheria_control_plane"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
prost = "0.13"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic = { version = "0.12", features = ["transport"] }
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../kernel-core" }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
tower = "0.5"
http-body-util = "0.1"
wattswarm-protocol = { git = "https://github.com/wattetheria/wattswarm.git", rev = "9965eea30b88b4ebb16a4e6a855f4d37ecb70284", package = "wattswarm-protocol" }
