[package]
name = "wattetheria-control-plane"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "wattetheria_control_plane"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
prost = "0.13"
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
tokio.workspace = true
tonic = { version = "0.12", features = ["transport"] }
tower = "0.5"
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
wattetheria-social = { path = "../social" }
wattetheria-gateway-contract = { path = "../gateway-contract" }
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../kernel-core" }
watt-wallet = { path = "../../../watt-wallet" }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
http-body-util = "0.1"
wattswarm-protocol = { git = "https://github.com/wattetheria/wattswarm.git", rev = "9965eea30b88b4ebb16a4e6a855f4d37ecb70284", package = "wattswarm-protocol" }
