[package]
name = "wattetheria-control-plane"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[lints]
workspace = true

[lib]
name = "wattetheria_control_plane"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
prost = "0.13"
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3 = "0.10"
serde_urlencoded = "0.7"
tokio.workspace = true
tonic = { version = "0.12", features = ["transport"] }
tower = "0.5"
tracing.workspace = true
reqwest.workspace = true
uuid.workspace = true
wattetheria-social = { path = "../social" }
wattetheria-gateway-contract = { path = "../gateway-contract" }
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../kernel-core" }
watt-did = { path = "../../../watt-did" }
watt-wallet = { path = "../../../watt-wallet" }
wattswarm-protocol = { git = "https://github.com/wattetheria/wattswarm.git", branch = "main", package = "wattswarm-protocol" }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
async-trait.workspace = true
ed25519-dalek.workspace = true
tempfile.workspace = true
http-body-util = "0.1"
