[package]
name = "wattetheria-kernel-core"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[lints]
workspace = true

[lib]
name = "wattetheria_kernel"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
bs58.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_core.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true
jsonschema.workspace = true
flate2.workspace = true
fs2.workspace = true
futures-util.workspace = true
tempfile.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
watt-did = { path = "../../../watt-did" }
watt-wallet = { path = "../../../watt-wallet" }
wattswarm-protocol = { git = "https://github.com/wattetheria/wattswarm.git", branch = "main", package = "wattswarm-protocol" }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
