[package]
name = "wattetheria-node-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
libp2p.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wattetheria-control-plane = { path = "../control-plane" }
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../kernel-core" }
wattetheria-p2p-runtime = { path = "../p2p-runtime" }

[dev-dependencies]
axum.workspace = true
