[package]
name = "wattetheria-node-core"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wattetheria-control-plane = { path = "../control-plane" }
wattetheria-kernel = { package = "wattetheria-kernel-core", path = "../kernel-core" }
wattetheria-social = { path = "../social" }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
