[package]
name = "wattetheria-p2p-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "wattetheria_p2p_runtime"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
