[package]
name = "wattetheria-social"
version.workspace = true
edition.workspace = true

[lib]
name = "wattetheria_social"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
watt-did = { path = "../../../watt-did" }
